{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 168,
  "lineage": "28baf7dd-af45-c5d7-0cc4-2089a8870d5e",
  "resources": [
    {
      "module": "module.loadBalancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "api_service_listener",
      "provider": "module.loadBalancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208383029138:listener/app/pt1-applicationLoadBalancer/99fbfbde95dce164/f030a94997502336",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:208383029138:targetgroup/pt1-apiServiceTargetGroup/fa4723be71cf23c7",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208383029138:listener/app/pt1-applicationLoadBalancer/99fbfbde95dce164/f030a94997502336",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:208383029138:loadbalancer/app/pt1-applicationLoadBalancer/99fbfbde95dce164",
            "mutual_authentication": [],
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "pt1"
            },
            "tags_all": {
              "Environment": "pt1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadBalancer.aws_alb_target_group.apiServiceTargetGroup",
            "module.loadBalancer.aws_lb.applicationLoadBalancer",
            "module.securityGroup.aws_security_group.apiSecurityRules",
            "module.vpc_details.module.vpc.aws_subnet.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadBalancer",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "apiServiceTargetGroup",
      "provider": "module.loadBalancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208383029138:targetgroup/pt1-apiServiceTargetGroup/fa4723be71cf23c7",
            "arn_suffix": "targetgroup/pt1-apiServiceTargetGroup/fa4723be71cf23c7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208383029138:targetgroup/pt1-apiServiceTargetGroup/fa4723be71cf23c7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pt1-apiServiceTargetGroup",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "pt1"
            },
            "tags_all": {
              "Environment": "pt1"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadBalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "applicationLoadBalancer",
      "provider": "module.loadBalancer.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208383029138:loadbalancer/app/pt1-applicationLoadBalancer/99fbfbde95dce164",
            "arn_suffix": "app/pt1-applicationLoadBalancer/99fbfbde95dce164",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "pt1-applicationLoadBalancer-1734340874.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:208383029138:loadbalancer/app/pt1-applicationLoadBalancer/99fbfbde95dce164",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pt1-applicationLoadBalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dd2a9aec3d812b14"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00846f0ec8c141caa"
              },
              {
                "subnet_id": "subnet-0c5bb8e4b7d56e19a"
              }
            ],
            "subnets": [
              "subnet-00846f0ec8c141caa",
              "subnet-0c5bb8e4b7d56e19a"
            ],
            "tags": {
              "Environment": "pt1"
            },
            "tags_all": {
              "Environment": "pt1"
            },
            "vpc_id": "vpc-0994d439d2043c396",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.securityGroup.aws_security_group.apiSecurityRules",
            "module.vpc_details.module.vpc.aws_subnet.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apiSecurityRules",
      "provider": "module.securityGroup.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:security-group/sg-0dd2a9aec3d812b14",
            "description": "connection rules for connecting RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ouboud rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd2a9aec3d812b14",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open connection to 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "pt1-connection_rules_rds",
            "name_prefix": "",
            "owner_id": "208383029138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "pt1",
              "name": "security_group_rds"
            },
            "tags_all": {
              "Environment": "pt1",
              "name": "security_group_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:network-acl/acl-071fb7179ba05c287",
            "default_network_acl_id": "acl-071fb7179ba05c287",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-071fb7179ba05c287",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "208383029138",
            "subnet_ids": [
              "subnet-00846f0ec8c141caa",
              "subnet-05d521caa0e257dd5",
              "subnet-0b3c0d48c767ef702",
              "subnet-0c5bb8e4b7d56e19a",
              "subnet-0c9603621ff5188ad"
            ],
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-default"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-default"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:route-table/rtb-0af9a90bde684b27c",
            "default_route_table_id": "rtb-0af9a90bde684b27c",
            "id": "rtb-0af9a90bde684b27c",
            "owner_id": "208383029138",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-default"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:security-group/sg-02c3a87056bd9afd1",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02c3a87056bd9afd1",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "208383029138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-default"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-default"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064f910708ccc9f6a",
            "domain": "vpc",
            "id": "eipalloc-064f910708ccc9f6a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-66-176.compute-1.amazonaws.com",
            "public_ip": "44.194.66.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-us-east-1a"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_internet_gateway.this",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:internet-gateway/igw-019eeadbb81047349",
            "id": "igw-019eeadbb81047349",
            "owner_id": "208383029138",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064f910708ccc9f6a",
            "association_id": "eipassoc-05e2744b0e7e7d9a3",
            "connectivity_type": "public",
            "id": "nat-0f82aa2f61920449b",
            "network_interface_id": "eni-056872d79e4f60be8",
            "private_ip": "10.0.101.35",
            "public_ip": "44.194.66.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c5bb8e4b7d56e19a",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-us-east-1a"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_eip.nat",
            "module.vpc_details.module.vpc.aws_internet_gateway.this",
            "module.vpc_details.module.vpc.aws_subnet.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-013281306fee6eaf01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f82aa2f61920449b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013281306fee6eaf0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_eip.nat",
            "module.vpc_details.module.vpc.aws_internet_gateway.this",
            "module.vpc_details.module.vpc.aws_nat_gateway.this",
            "module.vpc_details.module.vpc.aws_route_table.private",
            "module.vpc_details.module.vpc.aws_subnet.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019eeadbb81047349",
            "id": "r-rtb-00574b7afd224e63e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00574b7afd224e63e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_internet_gateway.this",
            "module.vpc_details.module.vpc.aws_route_table.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:route-table/rtb-013281306fee6eaf0",
            "id": "rtb-013281306fee6eaf0",
            "owner_id": "208383029138",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-private"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:route-table/rtb-00574b7afd224e63e",
            "id": "rtb-00574b7afd224e63e",
            "owner_id": "208383029138",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-public"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc42dd431d06de55",
            "route_table_id": "rtb-013281306fee6eaf0",
            "subnet_id": "subnet-0b3c0d48c767ef702"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_route_table.private",
            "module.vpc_details.module.vpc.aws_subnet.private",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afa0d46e233ce6f5",
            "route_table_id": "rtb-013281306fee6eaf0",
            "subnet_id": "subnet-05d521caa0e257dd5"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_route_table.private",
            "module.vpc_details.module.vpc.aws_subnet.private",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e11c54a1f27e0d45",
            "route_table_id": "rtb-013281306fee6eaf0",
            "subnet_id": "subnet-0c9603621ff5188ad"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_route_table.private",
            "module.vpc_details.module.vpc.aws_subnet.private",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aafa200d52871a32",
            "route_table_id": "rtb-00574b7afd224e63e",
            "subnet_id": "subnet-0c5bb8e4b7d56e19a"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_route_table.public",
            "module.vpc_details.module.vpc.aws_subnet.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a01df696d0501442",
            "route_table_id": "rtb-00574b7afd224e63e",
            "subnet_id": "subnet-00846f0ec8c141caa"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_route_table.public",
            "module.vpc_details.module.vpc.aws_subnet.public",
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:subnet/subnet-0b3c0d48c767ef702",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3c0d48c767ef702",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208383029138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-private-us-east-1a",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-private-us-east-1a",
              "Type": "private"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:subnet/subnet-05d521caa0e257dd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d521caa0e257dd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208383029138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-private-us-east-1b",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-private-us-east-1b",
              "Type": "private"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:subnet/subnet-0c9603621ff5188ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9603621ff5188ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208383029138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-private-us-east-1a",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-private-us-east-1a",
              "Type": "private"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:subnet/subnet-0c5bb8e4b7d56e19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5bb8e4b7d56e19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208383029138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-public-us-east-1a",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-public-us-east-1a",
              "Type": "public"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:subnet/subnet-00846f0ec8c141caa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00846f0ec8c141caa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "208383029138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test-public-us-east-1b",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test-public-us-east-1b",
              "Type": "public"
            },
            "vpc_id": "vpc-0994d439d2043c396"
          },
          "dependencies": [
            "module.vpc_details.module.vpc.aws_vpc.this",
            "module.vpc_details.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_details.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc_details.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208383029138:vpc/vpc-0994d439d2043c396",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071fb7179ba05c287",
            "default_route_table_id": "rtb-0af9a90bde684b27c",
            "default_security_group_id": "sg-02c3a87056bd9afd1",
            "dhcp_options_id": "dopt-063620b414bae92a7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0994d439d2043c396",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af9a90bde684b27c",
            "owner_id": "208383029138",
            "tags": {
              "Environment": "pt1",
              "Name": "Nat-Test"
            },
            "tags_all": {
              "Environment": "pt1",
              "Name": "Nat-Test"
            }
          }
        }
      ]
    }
  ]
}